--- a/css/do.css
+++ b/css/do.css
@@ -1,4 +1,69 @@
-#pic1{
-  max-width: 100%;
-  height: 50px;
+#text1{
+  font-family: "Dancing Script";
+  text-transform: none;
+  letter-spacing: 0px;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 50px;
+}
+
+#text2{
+  font-family: "Dancing Script";
+  text-transform: none;
+  letter-spacing: 0px;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 50px;
+}
+
+
+#text3{
+  font-family: "Dancing Script";
+  text-transform: none;
+  letter-spacing: 0px;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 50px;
+}
+
+.pull-right{
+  font-family: "Roboto Slab";
+  font-style: normal;
+  font-size: 50px;
+  margin-right: 350px;
+}
+
+
+.fa-beat {
+  animation:fa-beat 5s ease infinite;
+}
+@keyframes fa-beat {
+  0% {
+    transform:scale(1);
+  }
+  5% {
+    transform:scale(1.25);
+  }
+  20% {
+    transform:scale(1);
+  }
+  30% {
+    transform:scale(1);
+  }
+  35% {
+    transform:scale(1.25);
+  }
+  50% {
+    transform:scale(1);
+  }
+  55% {
+    transform:scale(1.25);
+  }
+  70% {
+    transform:scale(1);
+  }
+}
+
+.heart {
+  color:red;
 }
