--- a/css/do.css
+++ b/css/do.css
@@ -4,33 +4,26 @@
   letter-spacing: 0px;
   font-weight: 400;
   font-style: normal;
-  font-size: 50px;
-}
-
-#text2{
-  font-family: "Dancing Script";
-  text-transform: none;
-  letter-spacing: 0px;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 50px;
-}
-
-
-#text3{
-  font-family: "Dancing Script";
-  text-transform: none;
-  letter-spacing: 0px;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 50px;
+  font-size: 30px;
+  padding-left: 10px;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 .pull-right{
   font-family: "Roboto Slab";
   font-style: normal;
-  font-size: 50px;
-  margin-right: 350px;
+  font-size: 30px;
+  margin-right: 240px;
+  text-shadow: 2px 2px 4px #000000;
+}
+
+.pull-left{
+  font-family: "Roboto Slab";
+  font-style: normal;
+  font-size: 30px;
+  position: absolute;
+  left: 240px;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 
@@ -66,4 +59,12 @@
 
 .heart {
   color:red;
+  font-size: 10px;
+  position: absolute;
+  left: 180px;
+  text-shadow: 2px 2px 4px #000000;
+}
+
+#test{
+  display: inline;
 }
