--- a/css/do.css
+++ b/css/do.css
@@ -88,10 +88,17 @@
   margin: auto;
 }
 
+#timer1{
+  font-size: 80px;
+  display: block;
+  margin: auto;
+}
+
 .gg{
   font-family: "Dancing Script";
   border-radius: 50px;
   border-color: red;
+  font-weight: bolder;
 }
 
 .showcase-img1{
@@ -122,4 +129,27 @@
 
 .showcase-text{
   padding: 5rem;
+}
+
+header{
+  background: url("../images/tar11.png");
+  background-size: cover;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+  height: 700px;
+}
+
+.gap{
+	padding-top: 5px;
+  padding-bottom: 5px;
+	width : 130px;
+	background: white;
+  border-radius :10px;
+  border: 5px solid white;
+  color: black;
+  font-size: 30px;
+  opacity: 0.6;
+  font-family: "Roboto Slab";
+  text-shadow: 2px 2px 4px #666666;
+  box-shadow: 5px 10px 18px #888888;
 }
