--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+#myVideo {
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  position: fixed;
+}
+
 html {
   line-height: 1.15;
   /* 1 */
@@ -819,7 +826,6 @@ legend {
   -ms-flex-align: center;
       align-items: center;
   font-family: 'Poppins', sans-serif;
-  background: url("../images/test2.jpg");
   background-size: cover;
   background-position: center center;
   padding: 15px;
@@ -831,11 +837,13 @@ legend {
 }
 
 .s006 form legend {
-  font-size: 36px;
+  font-size: 40px;
   color: #fff;
   font-weight: 800;
   text-align: center;
   margin-bottom: 59px;
+  font-family: 'Itim';
+  text-shadow: 2px 2px 4px #000000;
 }
 
 .s006 form .inner-form {
